--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ test { // (2)
 }
 
 dependencies {
+
+    compile('org.springframework.boot:spring-boot-starter-mustache')
     //(3)
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-mustache')
