--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #@@테스트 쿼리를 콘솔에서 확인
 spring.jpa.show_sql=True
 
+spring.profiles.include=real-oauth
+
 #@@출력되는 쿼리 로그를 MySQL 버전으로 변경
 #@@dialect.MySQL5InnoDBDialect #스프링부트 업데이트되면서 없어짐
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
