--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #@@테스트 쿼리를 콘솔에서 확인
 spring.jpa.show_sql=True
 
-spring.profiles.include=real-oauth
+spring.profiles.include=oauth
 
 #@@출력되는 쿼리 로그를 MySQL 버전으로 변경
 #@@dialect.MySQL5InnoDBDialect #스프링부트 업데이트되면서 없어짐
