--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,3 +9,9 @@ spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.datasource.hikari.username=sa
 
 spring.h2.console.enabled=True
+
+# Test OAuth
+
+spring.security.oauth2.client.registration.google.client-id=test
+spring.security.oauth2.client.registration.google.client-secret=test
+spring.security.oauth2.client.registration.google.scope=profile,email
