--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,8 @@
-#@@Å×½ºÆ® Äõ¸®¸¦ ÄÜ¼Ö¿¡¼­ È®ÀÎ
+#@@ï¿½×½ï¿½Æ® ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½Ü¼Ö¿ï¿½ï¿½ï¿½ È®ï¿½ï¿½
 spring.jpa.show_sql=True
 
-#@@Ãâ·ÂµÇ´Â Äõ¸® ·Î±×¸¦ MySQL ¹öÀüÀ¸·Î º¯°æ
-#@@dialect.MySQL5InnoDBDialect #½ºÇÁ¸µºÎÆ® ¾÷µ¥ÀÌÆ®µÇ¸é¼­ ¾ø¾îÁü
+#@@ï¿½ï¿½ÂµÇ´ï¿½ ï¿½ï¿½ï¿½ï¿½ ï¿½Î±×¸ï¿½ MySQL ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½
+#@@dialect.MySQL5InnoDBDialect #ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Æ® ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Æ®ï¿½Ç¸é¼­ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
@@ -10,7 +10,7 @@ spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.datasource.hikari.username=sa
 
 spring.h2.console.enabled=True
-
+spring.session.store-type=jdbc
 
 # Test OAuth
 
